Switch fcrepo-http-api to Junit5