@@ -13,7 +13,8 @@ import org.apache.http.client.methods.HttpPatch;
 import org.apache.http.entity.StringEntity;
 import org.fcrepo.search.api.Condition;
 import org.fcrepo.search.api.SearchResult;
-import org.junit.Test;
+
+import org.junit.jupiter.api.Test;
 import org.springframework.test.context.TestExecutionListeners;
 
 import java.io.IOException;
@@ -22,7 +23,6 @@ import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -40,10 +40,10 @@ import static org.fcrepo.search.api.Condition.Field.FEDORA_ID;
 import static org.fcrepo.search.api.Condition.Field.MIME_TYPE;
 import static org.fcrepo.search.api.Condition.Field.MODIFIED;
 import static org.fcrepo.search.api.Condition.Field.RDF_TYPE;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * @author dbernstein
@@ -104,7 +104,7 @@ public class FedoraSearchIT extends AbstractResourceIT {
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(), SearchResult.class);
             assertNotNull(result);
             assertNotNull(result.getPagination());
-            assertTrue("Items not found! " + resources, result.getItems().size() > 0);
+            assertTrue(result.getItems().size() > 0, "Items not found! " + resources);
             final var resultingFedoraIds =
                     result.getItems().stream().map(x -> x.get("fedora_id")).collect(Collectors.toList());
 
@@ -132,8 +132,8 @@ public class FedoraSearchIT extends AbstractResourceIT {
                 assertEquals(OK.getStatusCode(), getStatus(response));
                 final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                         SearchResult.class);
-                assertEquals("expected " + count + " items where condition = " + condition, count,
-                        result.getItems().size());
+                assertEquals(count, result.getItems().size(),
+                        "expected " + count + " items where condition = " + condition);
 
                 assertTrue(result.getItems().stream().map(x -> x.get(FEDORA_ID.toString()))
                         .allMatch(x -> x.toString().startsWith(urlPrefix)));
@@ -151,8 +151,8 @@ public class FedoraSearchIT extends AbstractResourceIT {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                     SearchResult.class);
-            assertEquals("expected 1 item where condition = " + condition, 1,
-                    result.getItems().size());
+            assertEquals(1, result.getItems().size(),
+                    "expected 1 item where condition = " + condition);
             modified = result.getItems().get(0).get(MODIFIED.toString()).toString();
         }
 
@@ -169,8 +169,8 @@ public class FedoraSearchIT extends AbstractResourceIT {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                     SearchResult.class);
-            assertEquals("expected 1 item where condition = " + condition, 1,
-                    result.getItems().size());
+            assertEquals(1, result.getItems().size(),
+                    "expected 1 item where condition = " + condition);
             final var newModified = result.getItems().get(0).get(MODIFIED.toString()).toString();
             assertNotEquals("Modified date should have changed  but it did not.", modified, newModified);
         }
@@ -185,8 +185,8 @@ public class FedoraSearchIT extends AbstractResourceIT {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                     SearchResult.class);
-            assertEquals("expected 1 item where condition = " + condition, 1,
-                    result.getItems().size());
+            assertEquals(1, result.getItems().size(),
+                    "expected 1 item where condition = " + condition);
         }
 
         final var httpDelete = new HttpDelete(resourceId);
@@ -198,104 +198,101 @@ public class FedoraSearchIT extends AbstractResourceIT {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                     SearchResult.class);
-            assertEquals("expected 0 items where condition = " + condition, 0,
-                    result.getItems().size());
+            assertEquals(0, result.getItems().size(),
+                    "expected 0 items where condition = " + condition);
         }
     }
 
+    @Test
     public void testModifiedGreaterAndLessThan() throws Exception {
         final var id = getRandomUniqueId();
         final int count = 1;
         final var instant = Instant.now();
         final var now = instant.toString();
-        final var tomorrow = instant.plus(Duration.ofDays(1)).toString();
-        createResources(id, count);
-        final var fedoraId = FEDORA_ID_PREFIX + "/" + id;
-        final var fedoraIdCondition = FEDORA_ID + "=" + fedoraId;
-        final var lessThanNow = MODIFIED + "<" + now;
-        final var greaterThanNow = MODIFIED + ">" + now;
-        final var lessThanTomorrow = MODIFIED + "<" + tomorrow;
-        final var greaterThanTomorrow = MODIFIED + ">" + tomorrow;
 
-        //no results for resources modified before now
+        final var tomorrow = instant.plus(Duration.ofDays(1));
+        final var resources = createResources(id, count);
+        assertEquals(1, resources.size());
+        final var externalFedoraId = resources.get(0);
+        final var lessThanNow = MODIFIED + encode("<") + now;
+        final var greaterThanNow = MODIFIED + encode(">") + now;
+        final var lessThanTomorrow = MODIFIED + encode("<") + tomorrow;
+        final var greaterThanTomorrow = MODIFIED + encode(">") + tomorrow;
+
+        // no results for resources modified before now
         String searchUrl =
-                getSearchEndpoint() + "condition=" + encode(fedoraIdCondition) + "&" + lessThanNow;
+                getSearchEndpoint() + "condition=" + lessThanNow;
         try (final CloseableHttpResponse response = execute(new HttpGet(searchUrl))) {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                     SearchResult.class);
-            assertEquals("expected no results", 0,
-                    result.getItems().size());
+            assertEquals(0, result.getItems().size(), "expected no results");
         }
-        //no results for resources modified after tomorrow
+        // no results for resources modified after tomorrow
         searchUrl =
-                getSearchEndpoint() + "condition=" + encode(fedoraIdCondition) + "&" + greaterThanTomorrow;
+                getSearchEndpoint() + "condition=" + greaterThanTomorrow;
         try (final CloseableHttpResponse response = execute(new HttpGet(searchUrl))) {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                     SearchResult.class);
-            assertEquals("expected no results", 0,
-                    result.getItems().size());
+            assertEquals(0, result.getItems().size(), "expected no results");
         }
 
         // ensure that greater than now returns a result
-        searchUrl = getSearchEndpoint() + "condition=" + encode(fedoraIdCondition) + "&" + greaterThanNow;
+        searchUrl = getSearchEndpoint() + "condition=" + greaterThanNow;
         try (final CloseableHttpResponse response = execute(new HttpGet(searchUrl))) {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                     SearchResult.class);
-            assertEquals("expected " + count + " results", count,
-                    result.getItems().size());
+            assertEquals(count, result.getItems().size(), "expected " + count + " results");
 
             assertTrue(result.getItems().stream().map(x -> x.get("fedora_id"))
-                    .allMatch(x -> x.toString().equals(fedoraId)));
+                    .allMatch(x -> x.toString().startsWith(externalFedoraId)));
         }
 
         // ensure that less than tomorrow returns a result
-        searchUrl = getSearchEndpoint() + "condition=" + encode(fedoraIdCondition) + "&" + lessThanTomorrow;
+        searchUrl = getSearchEndpoint() + "condition=" + lessThanTomorrow;
         try (final CloseableHttpResponse response = execute(new HttpGet(searchUrl))) {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                     SearchResult.class);
-            assertEquals("expected " + count + " results", count,
-                    result.getItems().size());
+            assertEquals(count, result.getItems().size(), "expected " + count + " results");
 
             assertTrue(result.getItems().stream().map(x -> x.get("fedora_id"))
-                    .allMatch(x -> x.toString().equals(fedoraId)));
+                    .allMatch(x -> x.toString().startsWith(externalFedoraId)));
         }
 
         // ensure that between now and tomorrow returns a result.
-        searchUrl = getSearchEndpoint() + "condition=" + encode(fedoraIdCondition) + "&" + greaterThanNow +
+        searchUrl = getSearchEndpoint() + "condition=" + greaterThanNow +
                 "&" + lessThanTomorrow;
         try (final CloseableHttpResponse response = execute(new HttpGet(searchUrl))) {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(),
                     SearchResult.class);
-            assertEquals("expected " + count + " results ", count,
-                    result.getItems().size());
+            assertEquals(count, result.getItems().size(), "expected " + count + " results ");
             assertTrue(result.getItems().stream().map(x -> x.get("fedora_id"))
-                    .allMatch(x -> x.toString().equals(fedoraId)));
+                    .allMatch(x -> x.toString().startsWith(externalFedoraId)));
         }
     }
 
     @Test
     public void testFieldsReturnsSpecifiedFields() throws Exception {
-        testFieldsReturnsOnlySpecifiedFields(Arrays.asList(FEDORA_ID, CREATED));
+        testFieldsReturnsOnlySpecifiedFields(List.of(FEDORA_ID, CREATED));
     }
 
     @Test
     public void testFieldsReturnsMimeType() throws Exception {
-        testFieldsReturnsOnlySpecifiedFields(Arrays.asList(MIME_TYPE));
+        testFieldsReturnsOnlySpecifiedFields(List.of(MIME_TYPE));
     }
 
     @Test
     public void testFieldsReturnsContentSize() throws Exception {
-        testFieldsReturnsOnlySpecifiedFields(Arrays.asList(CONTENT_SIZE));
+        testFieldsReturnsOnlySpecifiedFields(List.of(CONTENT_SIZE));
     }
 
     @Test
     public void testFieldsReturnsRDFType() throws Exception {
-        testFieldsReturnsOnlySpecifiedFields(Arrays.asList(RDF_TYPE));
+        testFieldsReturnsOnlySpecifiedFields(List.of(RDF_TYPE));
     }
 
 
@@ -312,11 +309,11 @@ public class FedoraSearchIT extends AbstractResourceIT {
             assertEquals(OK.getStatusCode(), getStatus(response));
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(), SearchResult.class);
             final var items = result.getItems();
-            assertEquals("expected " + count + " items", count, items.size());
+            assertEquals(count, items.size(), "expected " + count + " items");
             for (final Map<String, Object> item : items) {
-                assertEquals("expected " + fields.size() + " fields returned", fields.size(), item.size());
+                assertEquals(fields.size(), item.size(), "expected " + fields.size() + " fields returned");
                 for (final String field : fields) {
-                    assertTrue("Result does not contain expected field: " + field, item.containsKey(field));
+                    assertTrue(item.containsKey(field), "Result does not contain expected field: " + field);
                 }
             }
         }
@@ -447,7 +444,7 @@ public class FedoraSearchIT extends AbstractResourceIT {
             final SearchResult result = objectMapper.readValue(response.getEntity().getContent(), SearchResult.class);
             assertNotNull(result);
             assertNotNull(result.getPagination());
-            assertEquals("No results expected.", 0, result.getItems().size());
+            assertEquals(0, result.getItems().size(), "No results expected.");
         }
     }
 
